Attempt to fix spacing issue on hover by removing . before table in css - Didn't fix issue

--- a/app/stylesheets/partials/_album.scss
+++ b/app/stylesheets/partials/_album.scss
@@ -30,7 +30,7 @@
   }
 }
 
-.table.album-song-listing {
+table.album-song-listing {
   font-weight: $lighter-font-weight;
 
   td {
